[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { workspace = true }
blake3 = "1"
rand = "0.8"
ron = "0.8"
ryzz = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = "1"
tokio = { workspace = true, features = ["full"] }

[workspace]
members = ["cli"]

[workspace.dependencies]
auth = { git = "https://github.com/Banyc/auth.git", rev = "b2adfca0393040ff045eaf168f9fd38dabbd6f61" }
ryzz = { version = "0.2" }
tokio = { version = "1", features = ["full"] }
