[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1"
rand = "0.8"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = "1"
tokio = { workspace = true, features = ["full"] }

[features]
default = ["sqlx"]

[workspace]
members = ["cli"]

[workspace.dependencies]
sqlx = "0.8"
tokio = { version = "1", features = ["full"] }
